fixed bottom buttons spacing note:changed visibility to display so inactive buttons don't take space

--- a/web/Survey Forms/SurveyCSS/Survey.css
+++ b/web/Survey Forms/SurveyCSS/Survey.css
@@ -225,6 +225,7 @@ span {
 /*BOTTOM BUTTONS*/
 .buttons{
     display:flex;
+    align-items: center;
     justify-content: center;
 }
 
@@ -238,7 +239,8 @@ span {
     font-size: 1em;
     font-weight: bold;
     border-radius: 5px;
-    margin-bottom: 20px;
+    
+    margin: 20px 10px;
 }
 
 .previous{
@@ -252,7 +254,7 @@ span {
     font-size: 1em;
     font-weight: bold;
     border-radius: 5px;
-    margin-bottom: 20px;
+    margin: 20px 10px;
 }
 
 .previous:hover {
